# bd2proyecto

./: .gitignore  docker-compose.yml  pyproject.toml  seed.py
api/: README.md  config.py  main.py
api/db/: __init__.py  chromadb_client.py  mongodb.py
api/models/: __init__.py  game.py
api/routers/: games.py  vector.py
api/services/: game_utils.py  search.py  sync.py
apisteam/: 100_juegos_steam.json  Search2.py  juegos.json
