[project]
name = "bd2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=1.0.0",
    "dotenv-python>=0.0.1",
    "fastapi>=0.136.1",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "jupyterlab>=4.5.7",
    "notebook>=7.5.6",
    "pymongo>=4.17.0",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.34.0",
]
